fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     /* height: 100vh; */
     font-family: 'Plus Jakarta Sans', sans-serif;
@@ -14,7 +19,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    max-width: 100%;
+    /* max-width: 100%; */
     margin: 16px;
     /* margin: auto; */
 }
